--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <div class="container-fluid">
         <div class="row">
           <div class="col-md-4">
+            <!-- in order for yyx changes to take place in browser the index has to be changed to make it look different -->
             <h3>UFO Sightings: Fact or Fancy? <br><small>Ufologists Weigh In</small></h3>
           </div>
             <div class="col-md-8">
@@ -54,15 +55,26 @@
                 <form class="bg-dark">
                     <p>Filter Search</p>
                     <ul>
-                      <li>
-                        <label for="date">Enter Date</label>
-                        <input type="text" placeholder="1/10/2010" id="datetime" />
-                      </li>
-                      <li>
-                         <button id="filter-btn" type="button" class="btn btn-dark">
-                           Filter Table
-                         </button>
-                      </li>
+                        <li>
+                            <label for="date">Enter Date</label>
+                            <input class="input" type="text" placeholder="1/10/2010" id="datetime" />
+                        </li>
+                        <li>
+                            <label for="city">Enter City</label>
+                            <input class="input" type="text" placeholder="benton" id="city" />
+                        </li>
+                        <li>
+                            <label for="state">Enter State</label>
+                            <input type="text" placeholder="ar" id="state" />
+                        </li>
+                        <li>
+                            <label for="country">Enter Country</label>
+                            <input type="text" placeholder="us" id="country" />
+                        </li>
+                        <li>
+                            <label for="shape">Enter Shape</label>
+                            <input type="text" placeholder="circle" id="shape" />
+                        </li>
                     </ul>
                 </form>
                 
