making final changes to the README, window title, and images used in report

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- index.html -->
+<!-- index.html for the module 11 challenge 20210911-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>My Title Goes Here</title>
+  <title>UFO Sightings Search Portal</title>
   <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -54,6 +54,7 @@
             <div class="col-md-3">
                 <form class="bg-dark">
                     <p>Filter Search</p>
+                    <div class="warning-msg"><P></P></div>
                     <ul>
                         <li>
                             <label for="date">Enter Date</label>
